Closed
Bug 776333
Opened 13 years ago
Closed 13 years ago
"ASSERTION: We forgot to Morph a slim wrapper!" with Components.lookupMethod
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: jruderman, Unassigned)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files)
###!!! ASSERTION: We forgot to Morph a slim wrapper!: 'clasp->ext.innerObject || IS_WN_WRAPPER_OBJECT(obj)', file js/xpconnect/wrappers/WrapperFactory.cpp, line 283
Assertion failure: (DebugCheckWrapperClass(obj) && !js::GetReservedSlot(obj, 0).isDouble()), at js/xpconnect/wrappers/XrayWrapper.cpp:440
Might be a regression from bug 774245.
Reporter | ||
Comment 1•13 years ago
|
||
![]() |
||
Updated•13 years ago
|
Blocks: 774245
tracking-firefox17:
--- → ?
Comment 3•13 years ago
|
||
We're not going through PrepareForUnwrapping, so we need to manually morph slim wrappers.
Attachment #644916 -
Flags: review?(mrbkap)
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #644916 -
Flags: review?(mrbkap) → review+
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Updated•13 years ago
|
status-firefox17:
--- → fixed
Comment 6•13 years ago
|
||
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:17.0) Gecko/17.0 Firefox/17.0
Verified the fix on latest Firefox 17 beta debug build on Mac Os X 10.7.5 and doesn't assert.
Marking verified for Firefox 17.
You need to log in
before you can comment on or make changes to this bug.
Description
•