Bug 776333 - Morph slim wrappers in LookupMethod. r=mrbkap