js/xpconnect/src/XPCComponents.cpp
@@ -2722,6 +2722,10 @@ nsXPCComponents_Utils::LookupMethod(const JS::Value& object,
         if (!ac.enter(cx, obj))
             return NS_ERROR_FAILURE;
 
+        // Morph slim wrappers.
+        if (IS_SLIM_WRAPPER(obj) && !MorphSlimWrapper(cx, obj))
+            return NS_ERROR_FAILURE;
+
         // Now, try to create an Xray wrapper around the object. This won't work
         // if the object isn't Xray-able. In that case, we throw.
         JSObject *xray = WrapperFactory::WrapForSameCompartmentXray(cx, obj);
